# pythonprac

./: .gitignore  README.md
20230912/1/: error_main.py  main.py
20230919/0/: main_1.py  main_2.py  main_3.py  main_4.py  main_5.py  main_6.py
20230919/1/: prog.py
20230919/2/: prog.py
20230919/3/: prog.py
20230926/0/: prog.py
20230926/1/: prog.py
20230926/2/: prog.py
20230926/3/: prog.py
20231003/1/: prog.py
20231003/2/: prog.py
20231003/3/: prog.py
20231010/0/: prog.py  prog1.py  prog2.py  prog3.py
20231017/0/: prog.py  prog1.py  prog2.py
20231017/1/: prog.py
20231017/2/: prog.py
20231017/3/: prog.py
20231024/0/: prog.py
20231024/1/: prog.py
20231024/2/: prog.py
20231024/3/: prog.py
20231031/1/: prog.py
20231031/2/: prog.py
20231031/3/: prog.py
20231107/0/: prog.py
20231107/1/: prog.py
20231107/2/: prog.py
20231107/3/: prog.py
20231114/1/: prog.py
20231114/2/: prog.py
20231114/3/: prog.py
20231121/0/: main.py
20231205/0/: main.py
20231205/1/: prog.py
20240219/1/: entity.py  exeptions.py  logic.py  main.py  test
20240513/1/: Pipfile  dodo.py  pyproject.toml  setup.cfg
20240513/1/doc/source/: API.rst  conf.py
20240513/1/mood/client/: __init__.py  __main__.py  client.py
20240513/1/mood/po/ru_RU.UTF-8/LC_MESSAGES/: server.po
20240513/1/mood/server/: __init__.py  __main__.py  server.py
20240513/1/mood/utils/: logic.py
20240513/1/template/: templ.mood
20240513/1/test/: move_monster.test  test.py  test_client.py
20240513/1/test/in/: test_mocker_addmon.mood  test_mocker_attack.mood
(+203 files in other folders)
