[project]
name="mood"
version="0.0.1"
license = {text = "MIT-0"}

[build-system]
requires = ["flake8", "isort", "pydocstyle", "doit", "sphinx", "babel", "python-cowsay"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
MOOD="mood"

[tool.setuptools.package-data]
MOOD=["po/ru_RU.UTF-8/LC_MESSAGES/server.mo"]