[project]
name="mood"
version="0.0.1"
license = {text = "MIT-0"}
dependencies = ["python-cowsay"]

[build-system]
requires = ["flake8", "isort", "pydocstyle", "doit", "sphinx", "babel"]
build-backend = "setuptools.build_meta"

[project.scripts]
moodserver = "mood.server:start"
moodclient = "mood.client:run_client"


[tool.setuptools.package-dir]
mood="mood"

[tool.setuptools.package-data]
mood=["po/ru_RU.UTF-8/LC_MESSAGES/server.mo"]